[package]
name = "UniversalDebugLogger"
version = "0.1.0"
authors = ["Harings Rob <haringsrob@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.9.0"
jsonxf = "1.1"
tui = "0.14"
termion = "1.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[[bin]]
name = "udl"
path = "src/main.rs"
